--- a/docs/public/main.css
+++ b/docs/public/main.css
@@ -58,6 +58,11 @@ pre {
     border-radius: 10px;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .image-row {
     display: flex;
     flex-direction: row;
